Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,21 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -175,10 +163,10 @@
        "data": [
         {
          "mode": "lines",
-         "name": "f(x) = (g(x))^2",
+         "name": "g(x) = .5*x",
          "text": [],
          "type": "scatter",
-         "uid": "e15c26b6-19c7-11e9-8f80-95ff28fd43c8",
+         "uid": "1de46300-19c8-11e9-8f80-95ff28fd43c8",
          "x": [
           0,
           1,
@@ -206,10 +194,10 @@
         },
         {
          "mode": "lines",
-         "name": "g(x) = .5*x",
+         "name": "f(x) = (g(x))^2",
          "text": [],
          "type": "scatter",
-         "uid": "e15c28aa-19c7-11e9-8f80-95ff28fd43c8",
+         "uid": "1de464cc-19c8-11e9-8f80-95ff28fd43c8",
          "x": [
           0,
           1,
@@ -239,10 +227,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"d24d723c-8aee-4cc4-ae57-fdd9a5e2f79c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d24d723c-8aee-4cc4-ae57-fdd9a5e2f79c\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"e17abfea-19c7-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"e17ac170-19c7-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\", [{\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"1de83ca0-19c8-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"1de83e80-19c8-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"d24d723c-8aee-4cc4-ae57-fdd9a5e2f79c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d24d723c-8aee-4cc4-ae57-fdd9a5e2f79c\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"e17abfea-19c7-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"e17ac170-19c7-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\", [{\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"1de83ca0-19c8-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"1de83e80-19c8-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
