--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,10 +163,10 @@
        "data": [
         {
          "mode": "lines",
-         "name": "g(x) = .5*x",
+         "name": "g(x) = .5*x + 3",
          "text": [],
          "type": "scatter",
-         "uid": "1de46300-19c8-11e9-8f80-95ff28fd43c8",
+         "uid": "3dd7a406-19c8-11e9-8f80-95ff28fd43c8",
          "x": [
           0,
           1,
@@ -197,7 +197,7 @@
          "name": "f(x) = (g(x))^2",
          "text": [],
          "type": "scatter",
-         "uid": "1de464cc-19c8-11e9-8f80-95ff28fd43c8",
+         "uid": "3dd7a708-19c8-11e9-8f80-95ff28fd43c8",
          "x": [
           0,
           1,
@@ -227,10 +227,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\", [{\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"1de83ca0-19c8-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"1de83e80-19c8-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3d4ca8e7-fe4f-4c00-8fa8-8d4667ae819f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3d4ca8e7-fe4f-4c00-8fa8-8d4667ae819f\", [{\"mode\": \"lines\", \"name\": \"g(x) = .5*x + 3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"3dde0ea4-19c8-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"3dde103e-19c8-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0e0c970b-b240-4e40-9fd5-99da8cf69b4a\", [{\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"1de83ca0-19c8-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"1de83e80-19c8-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3d4ca8e7-fe4f-4c00-8fa8-8d4667ae819f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3d4ca8e7-fe4f-4c00-8fa8-8d4667ae819f\", [{\"mode\": \"lines\", \"name\": \"g(x) = .5*x + 3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"3dde0ea4-19c8-11e9-8f80-95ff28fd43c8\"}, {\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"3dde103e-19c8-11e9-8f80-95ff28fd43c8\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -247,7 +247,7 @@
     "f_of_x_values = list(map(lambda x: f_of_x(x),x_values))\n",
     "g_of_x_values = list(map(lambda x: g_of_x(x),x_values))\n",
     "f_of_x_trace = trace_values(x_values, f_of_x_values, mode = 'lines', name = 'f(x) = (g(x))^2')\n",
-    "g_of_x_trace = trace_values(x_values, g_of_x_values, mode = 'lines', name = 'g(x) = .5*x')\n",
+    "g_of_x_trace = trace_values(x_values, g_of_x_values, mode = 'lines', name = 'g(x) = .5*x + 3')\n",
     "plot([g_of_x_trace, f_of_x_trace])"
    ]
   },
